--- a/数据结构与算法/笔记/数据结构_严蔚敏.md
+++ b/数据结构与算法/笔记/数据结构_严蔚敏.md
@@ -4,17 +4,17 @@
 
 ### 数据、数据元素、数据项和数据对象
 
-**数据（Data）**是客观事物的符号表示，是所有能输入计算机中并被计算机程序处理得到符号的总称。
+**数据**（Data）是客观事物的符号表示，是所有能输入计算机中并被计算机程序处理得到符号的总称。
 
-**数据元素（Data Element）**是数据的基本单位，在计算机中通常作为一个整体进行考虑和处理。在有些情况下数据元素也称为元素、记录等。数据元素用于完整地描述一个对象。
+**数据元素**（Data Element）是数据的基本单位，在计算机中通常作为一个整体进行考虑和处理。在有些情况下数据元素也称为元素、记录等。数据元素用于完整地描述一个对象。
 
-**数据项（Data Item）**是组成数据元素的、有独立含义的、不可分割的最小单位。例如，学生基本信息表中的学号、姓名、性别等都是数据项。
+**数据项**（Data Item）是组成数据元素的、有独立含义的、不可分割的最小单位。例如，学生基本信息表中的学号、姓名、性别等都是数据项。
 
-**数据对象（Data Object）**是性质相同的数据元素的集合，是数据的一个子集。例如：整数数据对象是集合$$N= \{0, \pm1, \pm2, \pm3, ...\}$$，字符数据对象是集合$$C=\{'A', 'B', 'C',..., 'Z', 'a', 'b', 'c',..., 'z' \}$$。
+**数据对象**（Data Object）是性质相同的数据元素的集合，是数据的一个子集。例如：整数数据对象是集合$$N= \{0, \pm1, \pm2, \pm3, ...\}$$，字符数据对象是集合$$C=\{'A', 'B', 'C',..., 'Z', 'a', 'b', 'c',..., 'z' \}$$。
 
 ### 数据结构
 
-**数据结构（Data Structure）**是相互之间存在一种或多种特定关系的数据元素的集合。 另言之，数据结构是带“结构”的数据元素的集合，“结构”就是数据元素之间存在的关系。
+**数据结构**（Data Structure）是相互之间存在一种或多种特定关系的数据元素的集合。 另言之，数据结构是带“结构”的数据元素的集合，“结构”就是数据元素之间存在的关系。
 
 数据结构包括逻辑结构和存储结构。
 
