--- a/数据结构与算法/笔记/数据结构_严蔚敏.md
+++ b/数据结构与算法/笔记/数据结构_严蔚敏.md
@@ -33,90 +33,50 @@
 
 （1）集合结构
 
-
+数据元素之间除了属于同一集合的关系外，别无其它关系。例如，确定一名学生是否为班级成员，只需将班级看成一个集合结构。
 
 （2）线性结构
 
+数据元素之间存在一对一的关系。例如，将学生信息数据按照其入学报道的时间先后顺序进行排列，将组成一个线性结构。
 
+（3）树结构
+
+数据元素之间存在一对多的关系。例如，在班级的管理体系中，班长管理多个组长，每位组长管理多个组员，从而构成树结构。
+
+（4）图结构
+
+数据元素之间存在多对多的关系。例如，多名同学之间的朋友关系，任何两个同学都可以是朋友，从而构成图结构或网状结构。
+
+其中集合结构、树结构和图结构或网状结构属于非线性结构。
+
+线性结构包括线性表，栈和队列、字符串、数组、广义表。非线性结构包括树结构[分为树（具有多个分支的层次结构）和二叉树（具有两个分支的层次结构）]、图结构[分为有向图（一种图结构、边是顶点的有序对）和无向图（另一种结构，边是顶点的无序对）]和集合结构。
 
 
 2. **存储结构**
 
+数据对象在计算机中的存储表示称为存储结构，也称为物理结构。把数据对象存储到计算机时，通常要求既要存储各数据元素的数据，又要存储数据元素之间的逻辑关系，数据元素在计算机内用一个节点表示。数据元素在计算机中有两种基本的存储结构，分别是顺序存储结构和链式存储结构。
 
+（1）顺序存储结构
 
+顺序存储结构是借助元素在存储器的相对位置来表示数据元素之间的逻辑关系的，通常借助程序设计语言的数组来描述。
 
+（2）链式存储结构
 
+顺序存储结构要求所有元素依次存放在一片连续的存储空间中，而链式存储结构，无须占用一整块连续的存储空间。但为了表示节点之间的关系，需要给每个节点附加指针字段，用于存放后继元素的存储地址。所以链式存储结构通常借助程序设计语言的指针类型来描述。
 
+### 数据结构类型和抽象数据类型
 
-## 抽象数据类型的表示和实现
+1. 数据类型
 
+   数据类型是高级程序语言的一个基本概念。
 
+   在程序设计语言中，每一个数据都属于某种数据类型。类型明显或隐含地规定了数据的取值范围、存储方式以及允许进行的运算，数据类型是一个值得集合和定义在这个值集上的一组操作的总称。
 
+2. 抽象数据类型
 
+   抽象是抽取出实际问题的本质。抽象数据类型
 
-## 算法和算法分析
-
-
-
-
-
-
-
-
-
-
-
-# 线性表
-
-
-
-
-
-
-
-
-
-# 栈和队列
-
-
-
-
-
-
-
-# 串、数组和广义表
-
-
-
-
-
-# 树和二叉树
-
-
-
-
-
-
-
-# 图
-
-
-
-
-
-
-
-
-
-# 查找
-
-
-
-
-
-
-
-# 排序
+   
 
 
 
