--- a/数据结构与算法/笔记/数据结构_严蔚敏.md
+++ b/数据结构与算法/笔记/数据结构_严蔚敏.md
@@ -74,7 +74,143 @@
 
 2. 抽象数据类型
 
-   抽象是抽取出实际问题的本质。抽象数据类型
+   抽象是抽取出实际问题的本质。**抽象数据类型**（Abstract Data Type, ADT）一般指由用户定义的、表示应用问题的数学模型，以及定义在这个模型上的一组操作的总称，具体包括3个部分：数据对象、数据对象上关系的集合以及数据对象的基本操作的集合。
+
+   抽象数据类型的定义格式如下：
+
+   ```
+   抽象数据类型 {
+   	数据对象:<数据对象的定义>
+   	数据关系:<数据关系的定义>
+   	数据操作:<数据操作的定义>
+   }ADT 抽象数据类型名
+   ```
+
+   其中，数据对象和数据关系的定义采用数学符号和自然语言描述，基本操作的定义格式为：
+
+   ```
+   基本操作名 (参数名)
+   	初始条件:<初始条件描述>
+   	操作结果:<操作结果描述>
+   ```
+
+   基本操作有两种参数：赋值参数只为操作提供输入值；引用参数以&打头，除可提供输入值外，还将返回操作结果。初始条件描述了操作执行之前数据结构和参数应满足的条件，若初始条件为空，则省略。操作结果说明了操作正常完成之后，数据结构的变化状况和相应返回的结果。
+
+## 抽象数据类型的表示与实现
+
+本书采用的类C语言精选了C语言的一个核心子集，同时做了若干扩充和修改，增强了语言的描述功能。
+
+1. 预定义常量以及类型：
+
+   ```c
+   #define OK 1
+   #define ERROR 0
+   #define OVERFLOW -2
+   //Status 是返回值类型，其值是函数结果状态代码
+   typedef int Status;
+   ```
+
+2. 数据结构的表示（存储结构）用类型定义（typedef）描述；数据元素类型约定为ElemType，由用户定义在使用该数据类型时自行定义。
+
+3. 基本操作的算法都用如下格式的函数描述：
+
+   ```c
+   函数类型 函数名 (函数参数表)
+   {
+       //算法说明
+       语句序列
+   }//函数名
+   ```
+
+4. 内存的动态分配与释放。
+   使用new和delete动态分配和释放内存空间：
+
+   ```c
+   分配空间	指针变量=new数据类型;
+   
+   释放空间	delete指针变量;
+   ```
+
+   
+
+5. 赋值语句：
+
+   ```c
+   变量名 = 表达式;									            /* 简单赋值 */ 
+   
+   变量名1 = 变量名2 = 变量名3 = … = 变量名n = 表达式;            /* 串联赋值 */
+   
+   (变量名1,  … , 变量名n) = (表达式1,  … , 表达式n);          /* 成组赋值 */  
+   
+   结构名1 = 结构名2;								            /* 结构赋值 */
+   结构名 = (值1, 值2, ... , 值n);
+   
+   变量名 = 条件表达式 ? 表达式T : 表达式F;			               /* 条件赋值 */ 
+   
+   变量名1 <--> 变量名2;								         /* 交换赋值 */ 
+   ```
+
+6. 选择语句：
+
+   ```c
+    if (表达式) 语句;								            /* 条件语句1 */
+    
+   if (表达式) 语句;								            /* 条件语句2 */
+   		 else 语句;
+   												
+   switch (表达式) 						   		         /* 开关语句 */
+   		{
+       		case 值1: 语句序列1 ; break;
+           	case 值2: 语句序列2 ; break;
+           	...
+               case 值n-1: 语句序列n-1 ; break;
+           	case 值n: 语句序列n ; break;
+           	default: 语句序列n+1;
+   		}
+   ```
+
+7. 循环语句：
+
+   ```c
+   for (表达式1; 条件; 表达式2) 语句;				            /* for语句 */
+   
+   while (条件) 语句;								            /* while */
+   
+   do {											            /* do-while语句 */
+       语句序列;
+   }while (条件);
+   ```
+
+8. 结束语句：
+
+   ```c
+   //函数结束语句
+   return 表达式;
+   
+   return;
+   
+   case或循环结束语句 break;
+   
+   异常结束语句 exit (异常代码);
+   ```
+
+9. 输入输出语句使用C++流式输入输出形式：
+
+   ```c
+   cin >> 变量1 >> ... >> 变量n;					         /* 输出语句 */
+   
+   cout << 表达式1 << ... << 表达式n;				         /* 输出语句 */
+   ```
+
+10. 基本函数：
+
+   ```c
+Max (表达式1, ... , 表达式n);						            /* 求最大值 */
+
+Min (表达式1, ... , 表达式n);						            /* 求最小值 */
+   ```
+
+
 
    
 
