--- a/数据结构与算法/笔记/数据结构_严蔚敏.md
+++ b/数据结构与算法/笔记/数据结构_严蔚敏.md
@@ -138,9 +138,9 @@
    ```c
    变量名 = 表达式;									            /* 简单赋值 */ 
    
-   变量名1 = 变量名2 = 变量名3 = … = 变量名n = 表达式;            /* 串联赋值 */
+   变量名1 = 变量名2 = 变量名3 = ... = 变量名n = 表达式;          /* 串联赋值 */
    
-   (变量名1,  … , 变量名n) = (表达式1,  … , 表达式n);          /* 成组赋值 */  
+   (变量名1, ... , 变量名n) = (表达式1, ... , 表达式n);        /* 成组赋值 */  
    
    结构名1 = 结构名2;								            /* 结构赋值 */
    结构名 = (值1, 值2, ... , 值n);
@@ -153,17 +153,16 @@
 6. 选择语句：
 
    ```c
-    if (表达式) 语句;								            /* 条件语句1 */
+   if (表达式) 语句;								            /* 条件语句1 */
     
    if (表达式) 语句;								            /* 条件语句2 */
-   		 else 语句;
+   else 语句;
    												
    switch (表达式) 						   		         /* 开关语句 */
    		{
        		case 值1: 语句序列1 ; break;
            	case 值2: 语句序列2 ; break;
-           	...
-               case 值n-1: 语句序列n-1 ; break;
+               ...
            	case 值n: 语句序列n ; break;
            	default: 语句序列n+1;
    		}
@@ -177,7 +176,7 @@
    while (条件) 语句;								            /* while */
    
    do {											            /* do-while语句 */
-       语句序列;
+      语句序列;
    }while (条件);
    ```
 
