--- a/数据结构与算法/笔记/数据结构_严蔚敏.md
+++ b/数据结构与算法/笔记/数据结构_严蔚敏.md
@@ -208,8 +208,33 @@ Max (表达式1, ... , 表达式n);						            /* 求最大值 */
 
 Min (表达式1, ... , 表达式n);						            /* 求最小值 */
    ```
+   
+## 算法和算法分析
 
 
+
+### 算法的定义及特性
+
+算法是为了解决某类问题而规定的一个有限长的操作序列。
+
+算法的5个重要特性：
+
+1. 有穷性。一个算法必须总是在执行有穷步后结束，且每一步都必须在有穷时间内完成。
+2. 确定性。对于每种情况下所应执行的操作，在算法中都有确定的规定，不会产生二义性，算法的执行者或阅读者都能明确其含义以及如何执行。
+3. 可行性。算法中的所有操作都可以通过将已经实现的基本操作运算执行有限次来实现。
+4. 输入。一个算法有0个或多个输入。当用函数描述算法时，输入往往是通过形参表示的，在它们被调用时，从主函数获得输入值。
+5. 输出。一个算法有一个或多个输出，它们是算法进行信息加工后得到的结果，无输出的算法没有任何意义。当用函数描述算法时，输出多用返回值或引用类型的形参表示。
+
+### 评价算法优劣的基本标准
+
+1. 正确性。在合理的数据输入下，好的算法能够在有限的运行时间内得到正确的结果。
+2. 可读性。一个好的算法，首先应便于人们理解和相互交流，其次才是机器可执行性。
+3. 健壮性。当输入的数据非法时，好的算法能适应地做出正确反应或进行相应处理，而不会产生一些莫名其妙的输出结果。
+4. 高效性。高效性包括时间和空间两个方面。时间高效是指算法设计合理，执行效率高，可以用时间复杂来度量；空间高效是指算法占用内存存储容量合理，可以用空间复杂度来度量。时间复杂度和空间复杂度是衡量算法的两个主要指标。
+
+
+
+### 算法的时间复杂性
 
    
 
