--- a/数据结构与算法/笔记/数据结构_严蔚敏.md
+++ b/数据结构与算法/笔记/数据结构_严蔚敏.md
@@ -236,9 +236,50 @@ Min (表达式1, ... , 表达式n);						            /* 求最小值 */
 
 ### 算法的时间复杂性
 
-   
+衡量算法效率的方法主要有两类：事后统计法和事前分析估算法。事后统计法需要先将算法实现，然后测算其时间和空间开销。这种方法的缺陷很明显，一是必须把算法转成可执行的程序，二是时空开销的测算结果依赖于计算机的软硬件等环境因素，这容易掩盖算法本身的优劣。所以我们通常采用事前分析估算法，通过计算机算法的渐进复杂度来衡量算法的效率。
+
+1. 问题规模和语句频度
+
+不考虑计算机的软硬件等环境因素，影响算法时间代价的最主要因素是问题规模。问题规模是算法求解问题输入量的多少，是问题大小的本质表示，一般用整数n表示。
+
+一个算法的执行时间大致上等于其所有语句执行时间总和，而语句的执行时间则为该条语句的重复执行次数和执行一次所需时间的乘积。
+
+一条语句的重复次数称作语句频度。由于语句的执行要有源程序经编程序翻译成目标代码，目标代码经装配在执行，因此语句执行一次实际所需的具体时间是与机器的软硬件环境密切相关的。所以，所谓的算法分析并非精确统计算法实际执行所需时间，而是针对算法中语句的执行次数做出估计，从中得到算法执行时间的信息。
+
+设每条语句执行一次所需的时间均是单位时间，则一个算法的执行时间可用该算法中所有语句频度之和来估量。
+
+> 例：
+>
+> 求两个n阶矩阵的乘积算法。
+>
+> ```c
+> for (i = 1; i <= n; i++) {						//频度n+1
+>     fot (j = 1; j <= n; j++) {					//频度n*(n+1)
+>         c[i][j] = 0;							//频度n^2
+>         for (k = 1; k <= n; k++)				//频度n^2 * (n+1)
+>         c[i][j] = c[i][j] + a[i][k] + b[k][j];	//频度n^3
+>     }
+> }
+> ```
+>
+> 该算法中所有语句频度之和，是矩阵阶数n的函数，用f(n)表示之。
+> $$
+> f(n)=2n^{3}+3n^{2}+2n+1
+> $$
 
 
+
+2. 算法的时间复杂度定义
+
+为了客观地反应一个算法的执行时间，可以只用算法中的基本语句的执行次数来度量算法的工作量。所谓基本语句指的是算法中重复次数和算法的执行时间成正比的语句，他对算法运行时间的贡献最大。通常，算法的执行时间是随问题规模增长而增长的，因此对算法的评价通常只需考虑其随问题规模增长的趋势。这种情况下，我们只需考虑当问题规模充分大时，算法中基本语句的执行次数在渐进意义下的阶。
+$$
+\lim_{n\to\infty}{f(n)/n^{3}} = \lim_{n\to\infty}{(2n^{3}+3n^{2}+2n+1)=2}
+$$
+$f(n)$与是同阶的，或者说$f(n)$和$n^{3}$的数量级相同。我们用“O”来表示数量级，记作$T(n)=O(f(n))=O(n^{3})$。一般情况下，算法中基本语句重复执行的次数是问题规模n的某个函数$f(n)$，算法的时间量度记作：
+$$
+T(n)=O(f(n))
+$$
+它表示随着问题规模的增大，算法执行时间的增长率和f(n)的增长率相同，称作算法的**渐进时间复杂度**，简称**时间复杂度**。
 
 
 
