--- a/数据结构与算法/Note/数据结构_严蔚敏.md
+++ b/数据结构与算法/Note/数据结构_严蔚敏.md
@@ -208,7 +208,7 @@ Max (表达式1, ... , 表达式n);						            /* 求最大值 */
 
 Min (表达式1, ... , 表达式n);						            /* 求最小值 */
    ```
-   
+
 ## 算法和算法分析
 
 
@@ -283,5 +283,32 @@ $$
 
 
 
+### 算法的时间复杂度分析举例
 
+分析算法时间复杂度的基本方法为：找出所有语句中语句频度最大的那条语句作为基本句，计算基本语句的频度得到问题规模n的某个函数$f(n)$,取其数量级用符号**“O”**表示。
 
+**定理1.1**	**若$f(n)=a_{m}n^{m}+a_{m-1}n^{m-1}+...+a_{0}$是一个多项式，则$T(n)=O(n^{m})$。**
+
+若算法可以用递归方法描述，则算法的时间复杂度通常可使用递归方程表示，此时将设计递归方程求解问题。
+
+```c
+// 1.常量阶示例
+{
+    x++;
+    s = 0;
+}
+```
+
+两条语句频度均为1，算法的执行时间是一个与问题规模n无关的常数，所以算法的时间复杂度$T(n)=O(f(1))$，称为常量阶。
+
+实际上，如果算法的执行时间不随问题规模n的增长而增长，算法中语句频度就是某个常数。即使这个常数再大，算法的时间复杂度都是O(1)。
+
+```c
+// 2.线性阶示例
+for (i = 0; i < n; ++i) { 
+    x++;
+    s = 0;
+}
+```
+
+循环体内两条语句的频度均为f(n)=n，所以算法的时间复杂度为T(n)=O(n)，称为线性阶。
