--- a/数据结构与算法/Note/数据结构_严蔚敏.md
+++ b/数据结构与算法/Note/数据结构_严蔚敏.md
@@ -263,29 +263,23 @@ Min (表达式1, ... , 表达式n);						            /* 求最小值 */
 > ```
 >
 > 该算法中所有语句频度之和，是矩阵阶数n的函数，用f(n)表示之。
-> $$
-> f(n)=2n^{3}+3n^{2}+2n+1
-> $$
+> $$f(n)=2n^{3}+3n^{2}+2n+1$$
 
 
 
 2. 算法的时间复杂度定义
 
 为了客观地反应一个算法的执行时间，可以只用算法中的基本语句的执行次数来度量算法的工作量。所谓基本语句指的是算法中重复次数和算法的执行时间成正比的语句，他对算法运行时间的贡献最大。通常，算法的执行时间是随问题规模增长而增长的，因此对算法的评价通常只需考虑其随问题规模增长的趋势。这种情况下，我们只需考虑当问题规模充分大时，算法中基本语句的执行次数在渐进意义下的阶。
-$$
-\lim_{n\to\infty}{f(n)/n^{3}} = \lim_{n\to\infty}{(2n^{3}+3n^{2}+2n+1)=2}
-$$
+$$\lim_{n\to\infty}{f(n)/n^{3}} = \lim_{n\to\infty}{(2n^{3}+3n^{2}+2n+1)=2}$$
 $f(n)$与是同阶的，或者说$f(n)$和$n^{3}$的数量级相同。我们用“O”来表示数量级，记作$T(n)=O(f(n))=O(n^{3})$。一般情况下，算法中基本语句重复执行的次数是问题规模n的某个函数$f(n)$，算法的时间量度记作：
-$$
-T(n)=O(f(n))
-$$
+$$T(n)=O(f(n))$$
 它表示随着问题规模的增大，算法执行时间的增长率和f(n)的增长率相同，称作算法的**渐进时间复杂度**，简称**时间复杂度**。
 
 
 
 ### 算法的时间复杂度分析举例
 
-分析算法时间复杂度的基本方法为：找出所有语句中语句频度最大的那条语句作为基本句，计算基本语句的频度得到问题规模n的某个函数$f(n)$,取其数量级用符号**“O”**表示。
+分析算法时间复杂度的基本方法为：找出所有语句中语句频度最大的那条语句作为基本句，计算基本语句的频度得到问题规模n的某个函数$f(n)$,取其数量级用符号“O”表示。
 
 **定理1.1**	**若$f(n)=a_{m}n^{m}+a_{m-1}n^{m-1}+...+a_{0}$是一个多项式，则$T(n)=O(n^{m})$。**
 
